# Axen2

./: .gitignore  MVP-STATUS-2026-01-02.md  README.md  SESSION-SUMMARY.md  complete-oauth-auth.py  test-calendar-tool.py  test-google-oauth.sh  test-mcp-e2e.py  verify-oauth.py
.claude/agents/: quotation_agent.md
.claude/commands/: my-workflow.md
dive-app/: .env  .env.example  .gitignore  README.md  STATUS.md  index.html  package-lock.json  package.json
dive-app/src/: App.css  App.tsx  index.css
dive-app/src-tauri/: Cargo.toml  tauri.conf.json
dive-app/src-tauri/capabilities/: default.json
dive-app/src-tauri/src/: main.rs  mcp_process.rs
docs/: architecture.md  epic-1-foundation-authentication.md  epic-2-core-ai-chat-multi-llm.md  epic-3-mcp-protocol-server-management.md  epic-4-security-layer-mcp-defender.md  epic-5-audit-logging-compliance.md  epic-6-admin-dashboard-controls.md  epic-7-offline-mode-enterprise-integration.md  epic-8-google-workspace-agentic-flow.md  google-oauth-setup.md  google-workspace-setup.md  mcp-backend-implementation-plan.md  milestones.md  mrd.md  mvp-milestones.md  mvp-scope.md  mvp-test-plan.md  platform-strategy.md  prd.md  techstack.txt  test-results-2026-01-05.md
docs/architecture/: 1-architecture-overview.md  10-testing-strategy.md  11-development-workflow.md  12-migration-rollout-strategy.md  13-disaster-recovery-business-continuity.md  14-future-architectural-considerations.md  15-appendices.md  2-technology-stack.md  3-system-architecture.md  4-data-architecture.md  5-security-architecture.md  6-integration-architecture.md  (+8 more)
(+28 files in other folders)
